<resources>
    <string name="app_name">Quizzes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_teachers">Teachers</string>
    <string name="menu_students">Students</string>
    <string name="menu_more">More</string>

    <string name="str_save">Save</string>
    <string name="str_enter_value">Enter Value</string>
    <string name="str_invalid_entered_value">Value invalid or already exist</string>
    <string name="str_ok">نعم</string>
    <string name="str_cancel">الغاء</string>
    <string name="str_message_request_camera_and_storage">يحتاج هذا التطبيق إلى الوصول إلى الكاميرا ومساحة التخزين الخاصة بك حتى تتمكن من التقاط الصور.</string>

    <string name="str_message_added_successfully">Added Successfully</string>
    <string name="str_message_updated_successfully">Updated Successfully</string>
    <string name="str_message_delete_successfully">Deleted Successfully</string>

    <string name="str_chat_edit_text_hint">Enter your message</string>
    <string name="str_loading">Loading...</string>
    <string name="str_empty_data">Not Found Data</string>
    <string name="str_login">Login</string>
    <string name="str_delete">Delete</string>
    <string name="str_add_new">Add New</string>
    <string name="str_search_hint">Search</string>
    <string name="str_registration">Registration</string>
    <string name="str_forget_password"><u>Forget Password</u></string>
    <string name="str_please_wait">Please Wait...</string>
    <string name="chat_edit_text_hint">Type Message...</string>
    <string name="str_please_type_message_firstly">Please type message firstly</string>

    <string name="str_password_length_invalid">Password Invalid Length, Password Must Be At Least 6 Digits</string>
    <string name="str_password_confirm_invalid">Confirm Password Invalid</string>
    <string name="str_full_name_invalid">Full Name Invalid</string>
    <string name="str_phone_invalid">Phone Invalid</string>
    <string name="str_address_invalid">Address Invalid</string>
    <string name="str_signup_fail">SignUp Fail: %s</string>
    <string name="str_invalid_username_or_password">Invalid username or password</string>
    <string name="str_login_successful">Login Successful</string>
    <string name="str_username_invalid">Invalid Username</string>

    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_password_confirm">Password Confirm</string>
    <string name="str_full_name">Full Name</string>
    <string name="str_phone">Phone</string>
    <string name="str_address">Address</string>
    <string name="str_username_hint" translatable="false">user@example.com</string>
    <string name="str_password_hint">Enter your password</string>
    <string name="str_default_password" translatable="false">12345678</string>
    <string name="str_password_confirm_hint">Enter Password Confirm</string>
    <string name="str_full_name_hint">Enter Full Name</string>
    <string name="str_phone_hint">Enter Phone</string>
    <string name="str_address_hint">Enter Address</string>
    <string name="str_email">Email</string>
    <string name="str_email_invalid">Email Invalid</string>

    <string name="str_account_type_admin">Administrator</string>
    <string name="str_account_type_teacher">Teacher</string>
    <string name="str_account_type_student">Student</string>

    <string name="str_more_profile">Profile</string>
    <string name="str_more_about">About</string>
    <string name="str_more_app_info">App Info</string>
    <string name="str_more_change_language">Change Language</string>
    <string name="str_more_language">العربية</string>
    <string name="str_more_logout">Logout</string>

    <string name="str_about_content">Content:</string>
    <string name="str_about_conditions">The conditions:</string>
    <string name="str_about_objectives">Objectives:</string>

    <string name="str_back_to_home">Back to Home</string>
    <string name="str_change_avatar"><u>Change Avatar</u></string>
    <string name="str_account_info">Account Info</string>
    <string name="str_account_info_edit">Edit Account Info</string>
</resources>