<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.getit.app.ui.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_teachers"
        android:name="com.getit.app.ui.fragments.UsersFragment"
        android:label="@string/menu_teachers"
        tools:layout="@layout/fragment_users">
        <argument
            android:name="userType"
            android:defaultValue="2"
            app:argType="int" />
    </fragment>

    <fragment
        android:id="@+id/nav_students"
        android:name="com.getit.app.ui.fragments.UsersFragment"
        android:label="@string/menu_students"
        tools:layout="@layout/fragment_users">
        <argument
            android:name="userType"
            android:defaultValue="3"
            app:argType="int" />
    </fragment>

    <fragment
        android:id="@+id/nav_more"
        android:name="com.getit.app.ui.fragments.MoreFragment"
        android:label="@string/menu_more"
        tools:layout="@layout/fragment_more"/>
</navigation>