<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_name" />

        <TextView
            style="@style/MoreTextTitle"
            android:text="@string/str_more_profile" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_arrow_forward" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View style="@style/SeparateHorizontalView" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_about" />

        <TextView
            style="@style/MoreTextTitle"
            android:text="@string/str_more_about" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_arrow_forward" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View style="@style/SeparateHorizontalView" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_app_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_app_info" />

        <TextView
            style="@style/MoreTextTitle"
            android:text="@string/str_more_app_info" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_arrow_forward" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View style="@style/SeparateHorizontalView" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_language" />

        <TextView
            style="@style/MoreTextTitle"
            android:text="@string/str_more_change_language" />

        <TextView
            android:id="@+id/language"
            style="@style/MoreTextTitle"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:text="@string/str_more_language"
            android:textColor="@color/orange" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View style="@style/SeparateHorizontalView" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_logout" />

        <TextView
            style="@style/MoreTextTitle"
            android:text="@string/str_more_logout" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_arrow_forward" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View style="@style/SeparateHorizontalView" />

</androidx.appcompat.widget.LinearLayoutCompat>