<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/lbl_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:text="@string/str_about_content"
            android:textColor="@color/green"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_1"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="7dp"
            android:gravity="start"
            android:textColor="@color/gray_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lbl_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:text="@string/str_about_conditions"
            android:textColor="@color/green"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_3"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="7dp"
            android:gravity="start"
            android:textColor="@color/gray_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lbl_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/conditions"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:text="@string/str_about_objectives"
            android:textColor="@color/green"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/objectives"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_5"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="7dp"
            android:gravity="start"
            android:textColor="@color/gray_dark"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>